added html elements for start page in index.htmnl , added styling for navigation bar in style.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- adding fontawesome icon library -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <nav class="nav-bar">
+
+            <img src="portfolio-template-5/image_geometry_1.svg" alt="triangle and square design">
+            <!-- toggle menu to be implemented -->
+            <a href="#">
+                <img src="portfolio-template-5/ic_menu.svg" alt="toggle menu hamburger icon">
+            </a>
+        </nav>
+        <section class="intro">
+            <header class="intro-header">
+                <h1>Ram Kumar Karuppusamy</h1>
+                <p>Hello! I am a full-stack web developer.I can built responsive websites. Please look through my
+                    previous projects</p>
+                <p>If you like my work and want to hire me for projects, please contact me</p>
+            </header>
+            <button class="button-contact">Start Collaboration</button>
+        </section>
+        <section class="hero-image-art">
+            <img src="portfolio-template-5/image_geometry_2.svg" alt="" class="img-art-1">
+        </section>
+    </div>
+
+
 </body>
+
 </html>
