added styling to all elements in the intro section of index.html

--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
 <body>
     <div class="container">
         <nav class="nav-bar">
-
-            <img src="portfolio-template-5/image_geometry_1.svg" alt="triangle and square design">
+            <img class="logo" src="portfolio-template-5/image_geometry_1.svg" alt="triangle and square design">
             <!-- toggle menu to be implemented -->
             <a href="#">
-                <img src="portfolio-template-5/ic_menu.svg" alt="toggle menu hamburger icon">
+                <img class="toggle-menu-icon" src="portfolio-template-5/ic_menu.svg" alt="toggle menu hamburger icon">
             </a>
         </nav>
         <section class="intro">
             <header class="intro-header">
                 <h1>Ram Kumar Karuppusamy</h1>
                 <p>Hello! I am a full-stack web developer.I can built responsive websites. Please look through my
-                    previous projects</p>
-                <p>If you like my work and want to hire me for projects, please contact me</p>
+                    previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
+
             </header>
             <button class="button-contact">Start Collaboration</button>
         </section>
-        <section class="hero-image-art">
+        <section class="intro-image-art">
             <img src="portfolio-template-5/image_geometry_2.svg" alt="" class="img-art-1">
         </section>
     </div>
