removed visible border in style.css, modified readme.md file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="main-container">
         <nav class="nav-bar">
             <img class="logo" src="portfolio-template-5/image_geometry_1.svg" alt="triangle and square design">
             <!-- toggle menu to be implemented -->
@@ -26,7 +26,6 @@
                 <h1>Ram Kumar Karuppusamy</h1>
                 <p>Hello! I am a full-stack web developer.I can built responsive websites. Please look through my
                     previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
-
             </header>
             <button class="button-contact">Start Collaboration</button>
         </section>
