logo and design elements are added as background in css, navbar is restructured

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- adding fontawesome icon library -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
 
 <body>
     <div class="main-container">
-        <nav class="nav-bar">
-            <img class="logo" src="portfolio-template-5/image_geometry_1.svg" alt="triangle and square design">
+        <header class="nav-header">
+            <!-- logo image added in the background using css -->
             <!-- toggle menu to be implemented -->
-            <a href="#">
-                <img class="toggle-menu-icon" src="portfolio-template-5/ic_menu.svg" alt="toggle menu hamburger icon">
-            </a>
-        </nav>
+            <nav class="nav-bar">
+                <a href="#">
+                    <img class="toggle-menu-icon" src="portfolio-template-5/ic_menu.svg"
+                        alt="toggle menu hamburger icon">
+                </a>
+            </nav>
+        </header>
         <section class="intro">
             <header class="intro-header">
                 <h1>Ram Kumar Karuppusamy</h1>
@@ -28,9 +28,7 @@
                     previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
             </header>
             <button class="button-contact">Start Collaboration</button>
-        </section>
-        <section class="intro-image-art">
-            <img src="portfolio-template-5/image_geometry_2.svg" alt="" class="img-art-1">
+            <!-- design art added in the background using css -->
         </section>
     </div>
 
