added html elements for projects and about me page,renamed image file

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <!-- toggle menu to be implemented -->
             <nav class="nav-bar">
                 <a href="#">
-                    <img class="toggle-menu-icon" src="portfolio-template-5/ic_menu.svg"
-                        alt="toggle menu hamburger icon">
+                    <img class="toggle-menu-icon" src="res-icons/ic_menu.svg" alt="toggle menu hamburger icon">
                 </a>
             </nav>
         </header>
+        <!-- main intro section -->
         <section class="intro">
             <header class="intro-header">
                 <h1>Ram Kumar Karuppusamy</h1>
@@ -30,9 +30,125 @@
             <button class="button-contact">Start Collaboration</button>
             <!-- design art added in the background using css -->
         </section>
+        <!-- porjects information section -->
+        <section class="projects">
+            <h2 class="projects-section-header">Projects</h2>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 21.png" alt="working on a laptop" class="project-thumbnail">
+                <h3 class="project-header">Project 1</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 22.png" alt="a laptop and a mobile" class="project-thumbnail">
+                <h3 class="project-header">Project 2</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 26.png" alt="an open laptop" class="project-thumbnail">
+                <h3 class="project-header">Project 3</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 27.png" alt="an open laptop" class="project-thumbnail">
+                <h3 class="project-header">Project 4</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 46.png" alt="an open laptop" class="project-thumbnail">
+                <h3 class="project-header">Project 5</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+            <!-- individual project tile -->
+            <div class="project">
+                <img src="res-images/Rectangle 47.png" alt="an open laptop" class="project-thumbnail">
+                <h3 class="project-header">Project 6</h3>
+                <div class="tech-list">
+                    <div class="tech-item">HTML/CSS</div>
+                    <div class="tech-item">Ruby on Rails</div>
+                    <div class="tech-item">Javascript</div>
+                </div>
+                <button class="project-button">
+                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                </button>
+            </div>
+        </section>
+        <!-- About me section -->
+        <section class="about-me">
+            <header class="aboutme-header">
+                <h3>About</h3>
+                <p></p>
+                <button class="button-aboutme">Get my CV <img src="" alt=""></button>
+            </header>
+            <div class="skillset-container">
+                <!-- skill set 1 -->
+                <div class="skillset">
+                    <h5 skillset-header>Languages</h5>
+                    <ul class="skill-list">
+                        <li>skill 1</li>
+                        <li>skill 2</li>
+                        <li>skill 3</li>
+                    </ul>
+                </div>
+                <!-- skill set 1 -->
+                <div class="skillset">
+                    <h5 skillset-header>Frameworks</h5>
+                    <ul class="skill-list">
+                        <li>skill 1</li>
+                        <li>skill 2</li>
+                        <li>skill 3</li>
+                    </ul>
+                </div>
+                <!-- skill set 1 -->
+                <div class="skillset">
+                    <h5 skillset-header>Skills</h5>
+                    <ul class="skill-list">
+                        <li>skill 1</li>
+                        <li>skill 2</li>
+                        <li>skill 3</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </div>
-
-
 </body>
-
 </html>
