added styling to contents in projects section

--- a/index.html
+++ b/index.html
@@ -33,83 +33,110 @@
         <!-- porjects information section -->
         <section class="projects">
             <h2 class="projects-section-header">Projects</h2>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 21.png" alt="working on a laptop" class="project-thumbnail">
-                <h3 class="project-header">Project 1</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+            <div class="projects-container">
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 1</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                                See this project
+                            </a>
+                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                        </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
-            </div>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 22.png" alt="a laptop and a mobile" class="project-thumbnail">
-                <h3 class="project-header">Project 2</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 2</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                                See this project
+                            </a>
+                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                        </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
-            </div>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 26.png" alt="an open laptop" class="project-thumbnail">
-                <h3 class="project-header">Project 3</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 3</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                                See this project
+                            </a>
+                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                        </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
-            </div>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 27.png" alt="an open laptop" class="project-thumbnail">
-                <h3 class="project-header">Project 4</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 4</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                                See this project
+                            </a>
+                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                        </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
-            </div>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 46.png" alt="an open laptop" class="project-thumbnail">
-                <h3 class="project-header">Project 5</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 5</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                            See this project
+                        </a>
+                        <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                    </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
-            </div>
-            <!-- individual project tile -->
-            <div class="project">
-                <img src="res-images/Rectangle 47.png" alt="an open laptop" class="project-thumbnail">
-                <h3 class="project-header">Project 6</h3>
-                <div class="tech-list">
-                    <div class="tech-item">HTML/CSS</div>
-                    <div class="tech-item">Ruby on Rails</div>
-                    <div class="tech-item">Javascript</div>
+                <!-- individual project tile -->
+                <div class="project-tile">
+                    <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail">
+                    <div class="project-details">
+                        <h3 class="project-title">Project 6</h3>
+                        <div class="tech-list">
+                            <div class="tech-item">HTML/CSS</div>
+                            <div class="tech-item">Ruby on Rails</div>
+                            <div class="tech-item">Javascript</div>
+                        </div>
+                        <div class="project-button"><a href="#">
+                            See this project
+                        </a>
+                        <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
+                    </div>
+                    </div>
                 </div>
-                <button class="project-button">
-                    See this project <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                </button>
+
             </div>
         </section>
         <!-- About me section -->
@@ -151,4 +178,5 @@
         </section>
     </div>
 </body>
+
 </html>
