to reuse button styling and header,content styling, added button hovering,button clicking effects

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         </header>
         <!-- main intro section -->
         <section class="intro">
-            <header class="intro-header">
-                <h1>Ram Kumar Karuppusamy</h1>
-                <p>Hello! I am a full-stack web developer.I can built responsive websites. Please look through my
+            <header>
+                <h2 class="section-header">Ram Kumar Karuppusamy</h2>
+                <p class="section-content">Hello! I am a full-stack web developer.I can build responsive websites. Please look through my
                     previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
             </header>
-            <button class="button-contact">Start Collaboration</button>
+            <button class="button-generic">Start Collaboration</button>
             <!-- design art added in the background using css -->
         </section>
         <!-- porjects information section -->
         <section class="projects">
-            <h2 class="projects-section-header">Projects</h2>
+            <h2 class="section-header">Projects</h2>
             <div class="projects-container">
                 <!-- individual project tile -->
                 <div class="project-tile">
@@ -44,11 +44,7 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                                See this project
-                            </a>
-                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                        </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
                 <!-- individual project tile -->
@@ -61,11 +57,7 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                                See this project
-                            </a>
-                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                        </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
                 <!-- individual project tile -->
@@ -78,11 +70,7 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                                See this project
-                            </a>
-                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                        </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
                 <!-- individual project tile -->
@@ -95,11 +83,7 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                                See this project
-                            </a>
-                            <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                        </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
                 <!-- individual project tile -->
@@ -112,11 +96,7 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                            See this project
-                        </a>
-                        <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                    </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
                 <!-- individual project tile -->
@@ -129,51 +109,47 @@
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
                         </div>
-                        <div class="project-button"><a href="#">
-                            See this project
-                        </a>
-                        <img src="res-icons/ic_arrow_right.svg" alt="right arrow image">
-                    </div>
+                        <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
-
             </div>
         </section>
         <!-- About me section -->
         <section class="about-me">
-            <header class="aboutme-header">
-                <h3>About</h3>
-                <p></p>
-                <button class="button-aboutme">Get my CV <img src="" alt=""></button>
+            <header>
+                <h2 class="section-header">About</h2>
+                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur.</p>
+                <button class="button-generic button-aboutme">Get my CV <img src="" alt=""></button>
             </header>
-            <div class="skillset-container">
-                <!-- skill set 1 -->
-                <div class="skillset">
-                    <h5 skillset-header>Languages</h5>
-                    <ul class="skill-list">
-                        <li>skill 1</li>
-                        <li>skill 2</li>
-                        <li>skill 3</li>
-                    </ul>
-                </div>
-                <!-- skill set 1 -->
-                <div class="skillset">
-                    <h5 skillset-header>Frameworks</h5>
-                    <ul class="skill-list">
-                        <li>skill 1</li>
-                        <li>skill 2</li>
-                        <li>skill 3</li>
-                    </ul>
-                </div>
-                <!-- skill set 1 -->
-                <div class="skillset">
-                    <h5 skillset-header>Skills</h5>
-                    <ul class="skill-list">
-                        <li>skill 1</li>
-                        <li>skill 2</li>
-                        <li>skill 3</li>
-                    </ul>
-                </div>
+            <!-- skill set 1 -->
+            <div class="skillset skillset1">
+                <h4 class="skillset-header">Languages</h4>
+                <ul class="skill-list">
+                    <li>skill 1</li>
+                    <li>skill 2</li>
+                    <li>skill 3</li>
+                </ul>
+            </div>
+            <!-- skill set 2 -->
+            <div class="skillset skillset2">
+                <h4 class="skillset-header">Frameworks</h4>
+                <ul class="skill-list">
+                    <li>skill 1</li>
+                    <li>skill 2</li>
+                    <li>skill 3</li>
+                </ul>
+            </div>
+            <!-- skill set 3 -->
+            <div class="skillset skillset3">
+                <h4 class="skillset-header">Skills</h4>
+                <ul class="skill-list">
+                    <li>skill 1</li>
+                    <li>skill 2</li>
+                    <li>skill 3</li>
+                </ul>
             </div>
         </section>
     </div>
