--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <section class="intro">
             <header>
                 <h2 class="section-header">Ram Kumar Karuppusamy</h2>
-                <p class="section-content">Hello! I am a full-stack web developer.I can build responsive websites. Please look through my
+                <p class="section-content">Hello! I am a full-stack web developer.I can build responsive websites.
+                    Please look through my
                     previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
             </header>
             <button class="button-generic">Start Collaboration</button>
@@ -39,7 +40,7 @@
                     <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 1</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -52,7 +53,7 @@
                     <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 2</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -65,7 +66,7 @@
                     <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 3</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -78,7 +79,7 @@
                     <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 4</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -91,7 +92,7 @@
                     <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 5</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -104,7 +105,7 @@
                     <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 6</h3>
-                        <div class="tech-list">
+                        <div class="tech-item-container">
                             <div class="tech-item">HTML/CSS</div>
                             <div class="tech-item">Ruby on Rails</div>
                             <div class="tech-item">Javascript</div>
@@ -118,7 +119,8 @@
         <section class="about-me">
             <header>
                 <h2 class="section-header">About</h2>
-                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur.</p>
@@ -128,27 +130,32 @@
             <div class="skillset skillset1">
                 <h4 class="skillset-header">Languages</h4>
                 <ul class="skill-list">
-                    <li>skill 1</li>
-                    <li>skill 2</li>
-                    <li>skill 3</li>
+                    <li class="skill-item">Javascript(ES5)</li>
+                    <li class="skill-item">Ruby</li>
+                    <li class="skill-item">HTML</li>
+                    <li class="skill-item">CSS</li>
                 </ul>
             </div>
             <!-- skill set 2 -->
             <div class="skillset skillset2">
                 <h4 class="skillset-header">Frameworks</h4>
                 <ul class="skill-list">
-                    <li>skill 1</li>
-                    <li>skill 2</li>
-                    <li>skill 3</li>
+                    <li class="skill-item">Bootstrap</li>
+                    <li class="skill-item">Ruby on Rails</li>
+                    <li class="skill-item">RSpec</li>
+                    <li class="skill-item">Capibara</li>
+                    <li class="skill-item">Selenium</li>
                 </ul>
             </div>
             <!-- skill set 3 -->
             <div class="skillset skillset3">
                 <h4 class="skillset-header">Skills</h4>
                 <ul class="skill-list">
-                    <li>skill 1</li>
-                    <li>skill 2</li>
-                    <li>skill 3</li>
+                    <li class="skill-item">CodeKit</li>
+                    <li class="skill-item">Codepen</li>
+                    <li class="skill-item">GitHub</li>
+                    <li class="skill-item">GitLab</li>
+                    <li class="skill-item">Terminal</li>
                 </ul>
             </div>
         </section>
