modified project technologies to ul-li list in each project tile for code review -1

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 1</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
@@ -53,11 +53,11 @@
                     <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 2</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
@@ -66,11 +66,11 @@
                     <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 3</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
@@ -79,11 +79,11 @@
                     <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 4</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
@@ -92,11 +92,11 @@
                     <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 5</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
@@ -105,11 +105,11 @@
                     <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail">
                     <div class="project-details">
                         <h3 class="project-title">Project 6</h3>
-                        <div class="tech-item-container">
-                            <div class="tech-item">HTML/CSS</div>
-                            <div class="tech-item">Ruby on Rails</div>
-                            <div class="tech-item">Javascript</div>
-                        </div>
+                        <ul class="tech-item-list">
+                            <li class="tech-item">HTML/CSS</li>
+                            <li class="tech-item">Ruby on Rails</li>
+                            <li class="tech-item">Javascript</li>
+                        </ul>
                         <button class="button-generic button-project">See this project</button>
                     </div>
                 </div>
