Add html form elements

--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
                 </ul>
             </div>
         </section>
+        <section class="contact">
+            <header>
+                <h2>Get Started</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                
+            </header>
+            <form action="https://formspree.io/f/mvoyeabj" method="post">
+                <input type="text" name="name" placeholder="Your name">
+                <input type="email" name="email" id="email" placeholder="Your email">
+                <textarea name="messages" id="messages"  rows="5" placeholder="Enter your message here"></textarea>
+                <button type="submit">start Collaboration</button>
+            </form>
+
+        </section>
     </div>
 </body>
 
